crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__colon_inside_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: date
        arg: "\"H:i:s\""
        span:
          - 5
          - 12
    span:
      - 2
      - 16
    full_span:
      - 0
      - 20
