crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__complex_chain.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: default
        arg: "\"N/A\""
        span:
          - 9
          - 13
      - name: title
        span:
          - 23
          - 5
      - name: truncatewords
        arg: "5"
        span:
          - 29
          - 15
    span:
      - 2
      - 43
    full_span:
      - 0
      - 47
