crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__empty_between_pipes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: filter
        span:
          - 10
          - 6
    span:
      - 2
      - 15
    full_span:
      - 0
      - 19
