crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__escaped_pipe_in_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"a\\\"\""
        span:
          - 5
          - 13
      - name: upper
        span:
          - 19
          - 5
    span:
      - 2
      - 23
    full_span:
      - 0
      - 27
