crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__escaped_quote_in_double_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "\"say \\\"hello\\\"\""
        span:
          - 5
          - 23
    span:
      - 2
      - 27
    full_span:
      - 0
      - 31
