crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__escaped_quote_in_single_quotes.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "'it\\'s fine'"
        span:
          - 5
          - 20
    span:
      - 2
      - 24
    full_span:
      - 0
      - 28
