crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__filter_arg_whitespace_after_colon.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: x
    filters:
      - name: default
        arg: "'value'"
        span:
          - 5
          - 16
    span:
      - 2
      - 20
    full_span:
      - 0
      - 24
