crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__filter_span_accuracy.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: v
    filters:
      - name: ab
        span:
          - 5
          - 2
      - name: cd
        arg: x
        span:
          - 8
          - 4
    span:
      - 2
      - 11
    full_span:
      - 0
      - 15
