crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__filter_with_variable_arg.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: default
        arg: other_var
        span:
          - 9
          - 17
    span:
      - 2
      - 25
    full_span:
      - 0
      - 29
