crates/djls-templates/src/snapshots/djls_templates__parser__tests__filters__no_whitespace.snap
---
source: crates/djls-templates/src/parser.rs
expression: test_nodelist
---
nodelist:
  - type: Variable
    var: value
    filters:
      - name: filter1
        span:
          - 8
          - 7
      - name: filter2
        span:
          - 16
          - 7
    span:
      - 2
      - 21
    full_span:
      - 0
      - 25
